# Portfolio-V3-Wagtail

./: .gitignore  Procfile  data.json  database.json  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt  settings.py
blog/: models.py
blog/migrations/: 0001_initial.py  0002_alter_blog_content.py  0002_blog.py  0002_blogpagetag_blog_tags_blogpagetag_content_object_and_more.py  0003_alter_blog_content.py  0004_alter_blog_content.py
blog/templates/blog/: blog_listing_page.html  blog_page.html
dynamicsettings/: apps.py  models.py
dynamicsettings/migrations/: 0001_initial.py
experience/: models.py
experience/migrations/: 0001_initial.py  0002_alter_projectpage_description.py  0002_portfoliopage_my_skills.py  0002_projectpagetag_project_softwares_used_and_more.py  0003_alter_portfoliopage_my_skills.py  0003_portfoliopage_cover_image_portfoliopage_my_timeline_and_more.py  0004_alter_portfoliopage_my_skills.py  0005_project_colorscheme.py  0006_alter_project_colorscheme.py
experience/templates/experience/: portfolio_page.html  project.html  (+1 more)
home/: models.py
home/migrations/: 0001_initial.py  0002_auto_20220626_1438.py  0002_homepage_button_router.py  0003_homepage_colorscheme.py  0003_homepage_hero_summary_homepage_hero_title_and_more.py  0004_alter_homepage_hero_summary.py  0004_homepage_resume.py
portfolio/: choices.py  wsgi.py
portfolio/settings/: base.py  dev.py  production.py
portfolio/templates/: base.html
static/: staticfiles.json
static/css/: custom.css
wagtailblocks/: apps.py  models.py
(+12 files in other folders)
