[tool.poetry]
name = "portfolio_project_v3"
version = "0.1.0"
description = ""
authors = ["ShyamSundhar1411 <clashwithchiefrpjyt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
wagtailcodeblock = "^1.25.0"
wagtailmenus = "^3.0.2"
Django = "3.2.13"
wagtail = "2.16.2"
cloudinary = "^1.29.0"
django-cloudinary-storage = "^0.3.0"
gunicorn = "^20.1.0"
whitenoise = "^6.2.0"
dj-database-url = "^0.5.0"
psycopg2 = "^2.9.3"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
